@@ -16,6 +16,10 @@ Changes in version 1.5.0 beta (2007-12-18):
   see the library documentation).
 - Fixed code so it doesn't generate assertion messages on Linux with debug version of wxWidgets anymore.
 - Updated samples to reflect new features.
+- Added shape style sfsPROCESS_DEL. If used then the DEL key is processed by the shape, otherwise
+  the shape is deleted by the shape canvas.
+- Added shape style sfsSHOW_HANDLES. If used then the shape's handles are shown if the shape is 
+  selected (even if the sfsSIZE_CHANGE style is not present).
 
 Changes in version 1.4.1 beta (2007-12-07):
 --------------------------------------------
